--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -26,18 +26,19 @@ twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
 
-# Assetic Configuration
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
-    #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
-        #yui_css:
-        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        less:
+            node: %node.path%
+            node_paths: [%node.modules_path%]
+            apply_to: "\.less$"
+        uglifyjs2:
+            bin: %kernel.root_dir%/../node_modules/.bin/uglifyjs
+        uglifycss:
+            bin: %kernel.root_dir%/../node_modules/.bin/uglifycss
 
 # Doctrine Configuration
 doctrine:
