--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "vich/uploader-bundle": "dev-master",
         "knplabs/knp-gaufrette-bundle": "dev-master",
         "hwi/oauth-bundle": "0.3.*@dev",
-        "doctrine/doctrine-migrations-bundle": "dev-master"
+        "doctrine/doctrine-migrations-bundle": "dev-master",
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "fzaninotto/faker": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
