--- a/src/Ads/AppBundle/Resources/config/services.yml
+++ b/src/Ads/AppBundle/Resources/config/services.yml
@@ -2,3 +2,8 @@ services:
     ads.user.provider:
         class: Ads\AppBundle\Security\User\Provider\UserProvider
         arguments: [@fos_user.user_manager]
+
+    ads.twig.header_extension:
+        class: Ads\AppBundle\Twig\FormatterExtension
+        tags:
+            - { name: twig.extension }
