--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "fzaninotto/faker": "dev-master",
-        "liip/imagine-bundle": "dev-master"
+        "liip/imagine-bundle": "dev-master",
+        "friendsofsymfony/jsrouting-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
