--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "fzaninotto/faker": "dev-master",
         "liip/imagine-bundle": "dev-master",
-        "friendsofsymfony/jsrouting-bundle": "dev-master"
+        "friendsofsymfony/jsrouting-bundle": "dev-master",
+        "friendsofsymfony/elastica-bundle": "dev-master",
+        "jms/serializer-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
