Implement facebook & twitter connect functionality.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -106,6 +106,8 @@ hwi_oauth:
         properties:
             facebook: facebookId
             twitter: twitterId
+    connect:
+        account_connector: ads.user.provider
 
 knp_gaufrette:
     stream_wrapper: ~
