--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "liip/imagine-bundle": "dev-master",
         "friendsofsymfony/jsrouting-bundle": "dev-master",
         "friendsofsymfony/elastica-bundle": "dev-master",
-        "jms/serializer-bundle": "dev-master"
+        "jms/serializer-bundle": "dev-master",
+        "pagerfanta/pagerfanta": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
