--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "friendsofsymfony/jsrouting-bundle": "dev-master",
         "friendsofsymfony/elastica-bundle": "dev-master",
         "jms/serializer-bundle": "dev-master",
-        "pagerfanta/pagerfanta": "dev-master"
+        "pagerfanta/pagerfanta": "dev-master",
+        "jms/security-extra-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
