--- a/composer.json
+++ b/composer.json
@@ -62,5 +62,11 @@
         "branch-alias": {
             "dev-master": "2.3-dev"
         }
+    },
+    "require-dev": {
+        "behat/symfony2-extension": "dev-master",
+        "behat/mink-extension": "dev-master",
+        "behat/mink-browserkit-driver": "dev-master",
+        "behat/mink-zombie-driver": "dev-master"
     }
 }
