Add post controller.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,6 +39,9 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    form:
+        resources:
+            - 'AdsAppBundle:Form:fields.html.twig'
 
 assetic:
     debug:          %kernel.debug%
