--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,7 +3,9 @@ imports:
     - { resource: security.yml }
 
 parameters:
+    elfinder.loader: Ads\AppBundle\Loader\FMElfinderLoader
     thumb_width: 234
+    web_dir: %kernel.root_dir%/../web
     elastica_website_types:
         post:
             mappings:
@@ -59,6 +61,10 @@ assetic:
             bin: %kernel.root_dir%/../node_modules/.bin/uglifyjs
         uglifycss:
             bin: %kernel.root_dir%/../node_modules/.bin/uglifycss
+        yui_css:
+            jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        yui_js:
+            jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
 # Doctrine Configuration
 doctrine:
@@ -158,3 +164,33 @@ fos_elastica:
 
 fos_js_routing:
     routes_to_expose: [ /* ]
+
+fm_elfinder:
+    locale: %locale%
+    editor: tinymce4
+    tinymce_popup_path: "asset[bundles/stafalcontinymce/vendor/tiny_mce/tiny_mce_popup.js]"
+    showhidden: false # defaults to false
+    fullscreen: true # defaults true, applies to simple and ckeditor editors
+    connector:
+        debug: false # defaults to false
+        roots:       # at least one root must be defined
+            uploads:
+                driver: LocalFileSystem
+                path: files
+                upload_allow: ['image/png', 'image/jpg', 'image/jpeg']
+                upload_deny: ['all']
+                upload_max_size: 2M
+
+stfalcon_tinymce:
+    include_jquery: false
+    language: %locale%
+    selector: '.tinymce'
+    theme:
+        simple:
+            plugins:
+                - "advlist autolink lists link image charmap anchor"
+                - "fullscreen"
+                - "save table contextmenu directionality"
+                - "paste textcolor"
+            toolbar1: "insertfile undo redo | styleselect | bold italic forecolor backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image"
+            file_browser_callback: elFinderBrowser
