--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
         "friendsofsymfony/elastica-bundle": "dev-master",
         "jms/serializer-bundle": "dev-master",
         "pagerfanta/pagerfanta": "dev-master",
-        "jms/security-extra-bundle": "dev-master"
+        "jms/security-extra-bundle": "dev-master",
+        "helios-ag/fm-elfinder-bundle": "dev-master",
+        "stfalcon/tinymce-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
