--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -31,6 +31,23 @@ fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
     prefix: /profile
 
+fos_user_profile_edit: # override
+    pattern: /settings
+    defaults:
+        _controller: FOSUserBundle:Profile:edit
+
+fos_user_profile_show: ## hack
+    pattern: /settings
+    defaults:
+        _controller: FOSUserBundle:Profile:show
+
+fos_user_change_password:
+    pattern: /settings/change-password
+    defaults:
+        _controller: FOSUserBundle:ChangePassword:changePassword
+    requirements:
+        _method: GET|POST
+
 fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
     prefix: /register
@@ -38,10 +55,6 @@ fos_user_register:
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
     prefix: /resetting
-
-fos_user_change_password:
-    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
-    prefix: /profile
 
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
