--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,7 @@ imports:
 
 parameters:
     elfinder.loader: Adstacy\AppBundle\Loader\FMElfinderLoader
+    max_post_per_page: 20
     thumb_width: 234
     web_dir: %kernel.root_dir%/../web
     elastica_website_types:
@@ -44,6 +45,7 @@ twig:
     strict_variables: %kernel.debug%
     globals:
         thumb_width: %thumb_width%
+        max_post_per_page: %max_post_per_page%
     form:
         resources:
             - 'AdstacyAppBundle:Form:fields.html.twig'
