--- a/src/Adstacy/AppBundle/Resources/config/services.yml
+++ b/src/Adstacy/AppBundle/Resources/config/services.yml
@@ -11,3 +11,9 @@ services:
         arguments: [@service_container]
         tags:
             - { name: twig.extension }
+
+    adstacy.twig.form_extension:
+        class: Adstacy\AppBundle\Twig\FormExtension
+        arguments: [@service_container]
+        tags:
+            - { name: twig.extension }
