--- a/src/Adstacy/UserBundle/Resources/config/services.yml
+++ b/src/Adstacy/UserBundle/Resources/config/services.yml
@@ -4,3 +4,9 @@ services:
         arguments: [%fos_user.model.user.class%]
         tags:
             - { name: form.type, alias: adstacy_profile }
+
+    adstacy.type.registration:
+        class: Adstacy\UserBundle\Form\Type\RegistrationFormType
+        arguments: [%fos_user.model.user.class%]
+        tags:
+            - { name: form.type, alias: adstacy_registration }
