--- a/web/.htaccess
+++ b/web/.htaccess
@@ -50,3 +50,21 @@ DirectoryIndex app.php
         # RedirectTemp cannot be used instead
     </IfModule>
 </IfModule>
+
+<IfModule mod_deflate.c>
+AddOutputFilterByType DEFLATE text/html
+AddOutputFilterByType DEFLATE application/xhtml+xml
+SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip dont-vary
+</IfModule>
+
+<IfModule mod_headers.c>
+   # 3 Month
+   <FilesMatch ".(flv|gif|jpg|jpeg|png|ico|swf)$">
+       Header set Cache-Control "max-age=7257600"
+   </FilesMatch>
+   # 1 Week
+   <FilesMatch ".(js|css)$">
+       Header set Cache-Control "max-age=604800"
+   </FilesMatch>
+    Header append Vary User-Agent env=!dont-vary
+</IfModule>
