--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -91,3 +91,13 @@ adstacy_app_user_followings:
     pattern: /{username}/followings
     defaults:
         _controller: AdstacyAppBundle:User:showFollowings
+
+adstacy_app_user_follow:
+    pattern: /{username}/follow
+    defaults:
+        _controller: AdstacyAppBundle:User:follow
+
+adstacy_app_user_unfollow:
+    pattern: /{username}/unfollow
+    defaults:
+        _controller: AdstacyAppBundle:User:unfollow
