--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,7 +7,9 @@ parameters:
     max_ad_per_page: 20
     thumb_width: 236
     mini_thumb_size: 118
+    profile_pic_size: 150
     web_dir: %kernel.root_dir%/../web
+    no_profpic_img: /bundles/adstacyapp/img/nophoto.gif
     elastica_website_types:
         ad:
             mappings:
@@ -47,6 +49,7 @@ twig:
     globals:
         thumb_width: %thumb_width%
         mini_thumb_size: %mini_thumb_size%
+        profile_pic_size: %profile_pic_size%
         max_ad_per_page: %max_ad_per_page%
     form:
         resources:
@@ -164,7 +167,11 @@ liip_imagine:
         mini_thumb:
             quality: 50
             filters:
-                thumbnail: { size: [118, 118], mode: outbound }
+                thumbnail: { size: [%mini_thumb_size%, %mini_thumb_size%], mode: outbound }
+        profile_pic:
+            quality: 75
+            filters:
+                thumbnail: { size: [%profile_pic_size%, %profile_pic_size%], mode: outbound }
 
 fos_elastica:
     clients:
