--- a/src/Adstacy/AppBundle/Resources/config/services.yml
+++ b/src/Adstacy/AppBundle/Resources/config/services.yml
@@ -17,3 +17,9 @@ services:
         arguments: [@service_container]
         tags:
             - { name: twig.extension }
+
+    adstacy.twig.user_extension:
+        class: Adstacy\AppBundle\Twig\UserExtension
+        arguments: [@service_container]
+        tags:
+            - { name: twig.extension }
