Add users searching capability.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,6 +20,15 @@ parameters:
                 provider: ~
                 finder: ~
                 listener: ~
+        user:
+            mappings:
+                username: { boost: 5 }
+            persistence:
+                driver: orm
+                model: Adstacy\AppBundle\Entity\User
+                provider: ~
+                finder: ~
+                listener: ~
 
 framework:
     #esi:             ~
