--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -52,6 +52,11 @@ fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
     prefix: /register
 
+fos_user_registration_confirmed: # hack
+    pattern: /settings
+    defaults:
+        _controller: FOSUserBundle:Profile:show
+
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
     prefix: /resetting
