--- a/src/Adstacy/AppBundle/Resources/config/services.yml
+++ b/src/Adstacy/AppBundle/Resources/config/services.yml
@@ -1,25 +1,8 @@
 imports:
   - { resource: types.yml }
+  - { resource: twig.yml }
 
 services:
     adstacy.user.provider:
         class: Adstacy\AppBundle\Security\User\Provider\UserProvider
         arguments: [@fos_user.user_manager, @session, @router]
-
-    adstacy.twig.formatter_extension:
-        class: Adstacy\AppBundle\Twig\FormatterExtension
-        arguments: [@service_container]
-        tags:
-            - { name: twig.extension }
-
-    adstacy.twig.form_extension:
-        class: Adstacy\AppBundle\Twig\FormExtension
-        arguments: [@service_container]
-        tags:
-            - { name: twig.extension }
-
-    adstacy.twig.user_extension:
-        class: Adstacy\AppBundle\Twig\UserExtension
-        arguments: [@service_container]
-        tags:
-            - { name: twig.extension }
