--- a/src/Adstacy/AppBundle/Resources/config/routing/walls.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing/walls.yml
@@ -22,4 +22,4 @@ adstacy_app_wall_unfollow:
 adstacy_app_wall_create:
     pattern: /walls/create
     defaults:
-        _controller: AdstacyAppBundle:Wall:add
+        _controller: AdstacyAppBundle:Wall:create
