--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,6 +8,7 @@ parameters:
     thumb_width: 236
     mini_thumb_size: 118
     profile_pic_size: 150
+    facebook_app_id: '476946822391252'
     web_dir: %kernel.root_dir%/../web
     no_profpic_img: /bundles/adstacyapp/img/nophoto.gif
     elastica_website_types:
@@ -64,6 +65,7 @@ twig:
         mini_thumb_size: %mini_thumb_size%
         profile_pic_size: %profile_pic_size%
         max_ad_per_page: %max_ad_per_page%
+        facebook_app_id: %facebook_app_id%
     form:
         resources:
             - 'AdstacyAppBundle:Form:fields.html.twig'
