--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -67,5 +67,14 @@ fos_js_routing:
 elfinder:
      resource: "@FMElfinderBundle/Resources/config/routing.yml"
 
+admin:
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
+    prefix: /_admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /_admin
+
 AdstacyAppBundle_user:
     resource: "@AdstacyAppBundle/Resources/config/routing/users.yml"
