--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,9 @@
         "pagerfanta/pagerfanta": "dev-master",
         "jms/security-extra-bundle": "dev-master",
         "helios-ag/fm-elfinder-bundle": "dev-master",
-        "stfalcon/tinymce-bundle": "dev-master"
+        "stfalcon/tinymce-bundle": "dev-master",
+        "sonata-project/admin-bundle": "dev-master",
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
