--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -37,6 +37,6 @@ security:
         - { path: ^/profile, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin, role: ROLE_SUPER_ADMIN }
+        - { path: ^/_admin, role: ROLE_SUPER_ADMIN }
         - { path: ^/efconnect, role: ROLE_USER }
         - { path: ^/elfinder, role: ROLE_USER }
