--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,7 +9,12 @@ parameters:
     thumb_width: 236
     mini_thumb_size: 103
     profile_pic_size: 100
+
     facebook_app_id: '476946822391252'
+    facebook_app_secret: '10af83878f15f4963c5a0a22fdc0e28b'
+    twitter_client_id: 'VNgnUYWcvjnmLiVHzYNEg'
+    twitter_client_secret: 'RF4WbIdC86hRMLQHj8OIRHDx5nApXRKhj5B4Ah5Rg'
+
     web_dir: %kernel.root_dir%/../web
     no_profpic_img: /bundles/adstacyapp/img/nophoto.gif
     elastica_website_types:
@@ -135,8 +140,8 @@ hwi_oauth:
     resource_owners:
         facebook:
             type: facebook
-            client_id: "138676862997429"
-            client_secret: "09a25b9562d2927df1e49e8d5dfee8b5"
+            client_id: %facebook_app_id%
+            client_secret: %facebook_app_secret%
             scope: "email"
             infos_url:     "https://graph.facebook.com/me?fields=username,name,email,picture.type(square)"
             paths:
@@ -144,8 +149,8 @@ hwi_oauth:
                 profilepicture: picture.data.url
         twitter:
             type: twitter
-            client_id: "VNgnUYWcvjnmLiVHzYNEg"
-            client_secret: "RF4WbIdC86hRMLQHj8OIRHDx5nApXRKhj5B4Ah5Rg"
+            client_id: %twitter_client_id%
+            client_secret: %twitter_client_secret%
     fosub:
         username_iterations: 30
         properties:
@@ -153,6 +158,9 @@ hwi_oauth:
             twitter: twitterId
     connect:
         account_connector: adstacy.user.provider
+    http_client:
+        timeout: 15
+        verify_peer: false
 
 knp_gaufrette:
     stream_wrapper: ~
