--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -1,6 +1,10 @@
 imports:
     - { resource: config.yml }
 
+parameters:
+    facebook_app_id: '138676862997429'
+    facebook_app_secret: '09a25b9562d2927df1e49e8d5dfee8b5'
+
 framework:
     router:
         resource: "%kernel.root_dir%/config/routing_dev.yml"
