--- a/src/Adstacy/AppBundle/Resources/config/routing.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing.yml
@@ -3,6 +3,11 @@ homepage:
     defaults:
         _controller: AdstacyAppBundle:App:index
 
+adstacy_app_stream:
+    pattern: /stream
+    defaults:
+        _controller: AdstacyAppBundle:App:stream
+
 adstacy_app_contact:
     pattern: /contact
     defaults:
