--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -280,3 +280,8 @@ sonata_admin:
             - { position: left, type: sonata.admin.block.admin_list }
     templates:
         edit: AdstacyAppBundle:Admin:edit.html.twig
+
+ornicar_apc:
+    host: http://adstacy.com
+    web_dir: %kernel.root_dir%/../web
+    mode: curl
