--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -62,7 +62,7 @@ framework:
     default_locale:  "%locale%"
     trusted_proxies: ~
     session:
-        save_path: %kernel.root_dir%/var/sessions
+        save_path: %kernel.root_dir%/sessions
     fragments:       ~
     http_method_override: true
 
