Add swiftmailer options.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -8,6 +8,8 @@ parameters:
 
     mailer_transport:  smtp
     mailer_host:       localhost
+    mailer_port:       25
+    mailer_encryption: null
     mailer_user:       ~
     mailer_password:   ~
 
